# platform

./: .dockerignore  .gitignore  .prettierrc  CHANGELOG.md  CHANGELOG.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  README.md  README.zh-CN.md  SECURITY.md  SECURITY.zh-CN.md  commitlint.config.js  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  tsconfig.node.json  uno.config.ts
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  postgresql.Dockerfile  protocol_executor.Dockerfile  protocol_executor.py  protocol_requirements.txt  pyproject.toml
apps/api/app/: config.py  database.py  main.py
apps/api/app/cli/: __init__.py  create_password_reset.py  validate_deployment.py
apps/api/app/libs/: aes_crypt.py  file_storage.py  lab_force_delete.py  masterbrain.py  protocol_agent.py  protocol_import.py  redis.py  safe_logging.py  sms_service.py  stopwords.txt  text_splitter.py  version.py
apps/api/app/models/: access_control.py  account_security.py  account_token.py  (+25 more)
apps/api/migrations/: env.py  model_registry.py
apps/api/tests/: test_access_control.py  test_aira_imports.py  test_airalogy_file.py  test_chat_models.py  test_chat_stream_errors.py  test_development_compose.py  test_error_responses.py  test_login.py  test_minio_storage.py  test_model_usage.py  test_protocol_lifecycle.py  test_record_search.py  test_resource_governance.py  test_resource_postgres.py  test_safe_logging.py  test_single_lab_config.py  test_single_lab_deployment.py  test_workflow.py
(+751 files in other folders)
