[project]
name = "airalogy-platform-backend"
version = "0.1.0"
description = "FastAPI backend for Airalogy Platform Community Edition"
authors = [{ name = "Airalogy" }]
dependencies = [
    "fastapi[standard] == 0.128.0",
    "uvicorn[standard] == 0.40.0",
    "pydantic == 2.12.5",
    "pydantic-settings == 2.12.0",
    "python-jose[cryptography] == 3.5.0",
    "orjson == 3.11.4",
    "bcrypt == 5.0.0",
    "sqlalchemy[asyncio] == 2.0.45",
    "asyncpg == 0.31.0",
    "python-multipart == 0.0.20",
    "alembic == 1.18.1",
    "pydash == 8.0.5",
    "miniopy-async == 1.22.1",
    "httpx == 0.28.1",
    "airalogy[markitdown] == 0.10.0",
    "pycryptodome == 3.22.0",
    "pgvector == 0.4.2",
    "semantic-text-splitter == 0.29.0",
    "cutword == 0.1.1",
    "openai>=2.8.0,<3",
    "masterbrain == 0.9.0",
    "alibabacloud-oss-v2 == 1.2.0",
    "alibabacloud-dysmsapi20170525 == 4.2.0",
    "alibabacloud-dysmsapi20180501 == 1.0.9",
    "redis == 7.1.0",
    "rich == 14.2.0",
    "markitdown[pdf,docx]>=0.1.4",
    "airalogy-engine==0.0.5",
]
requires-python = "~=3.13.0"
readme = "README.md"
license = { text = "Apache-2.0" }

[dependency-groups]
dev = [
    "openai>=2.8.0,<3",
    "matplotlib == 3.10.0",
    "biopython == 1.85",
    "pillow == 11.1.0",
    "numpy == 2.4.0",
    "pandas == 2.2.3",
    "scipy == 1.15.1",
]

[tool.pyrefly]
project-includes = ["**/*.py*"]
